[package]
edition = "2021"
name = "near-teller"
version = "0.1.0"

[dependencies]
near-sdk = "4.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[dev-dependencies]
anyhow = "1.0"
near-primitives = "0.15.0"
near-sdk = "4.0.0"
near-units = "0.2.0"
serde_json = "1.0"
tokio = {version = "1.14", features = ["full"]}
workspaces = "0.6.0"
